--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,3 +12,5 @@ en:
   invalid_roster: "This would cause an invalid roster."
   player_already_drafted: "This Player has already been drafted."
   ineligible_player_draft_pick: "This player is not eligible to be drafted in this round."
+  preferred_player_removal_problem: "There was a problem removing the preferred player."
+  invalid_access: "Invalid Access!"
