Added new functionality to handle a new user that needs to create/associate a team with the user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,12 +8,13 @@ en:
   no_team_for_user: "The current user is not associated with a March Madness Team."
   player_drafted: "Player was successfully drafted."
   out_of_turn_draft_pick: "It is not your turn to draft a player."
-  preferred_player_added: "Player was successfully added to your list of preferred players."
-  preferred_player_already_added: "This player has already been added to your preferred list."
+  preferred_player_added: "Player was successfully added to your list of drafted players."
+  preferred_player_removed: "Player was successfully removed from your list of drafted players."
+  preferred_player_already_added: "This player has already been added to your drafted list."
   invalid_roster: "This would cause an invalid roster."
   player_already_drafted: "This Player has already been drafted."
   ineligible_player_draft_pick: "This player is not eligible to be drafted in this round."
-  preferred_player_removal_problem: "There was a problem removing the preferred player."
+  preferred_player_removal_problem: "There was a problem removing the drafted player."
   invalid_access: "Invalid Access!"
   bracket_updated: "The bracket has been updated."
   rosters_locked: "All rosters are now locked."
