--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,3 +18,4 @@ en:
   invalid_access: "Invalid Access!"
   bracket_updated: "The bracket has been updated."
   rosters_locked: "All rosters are now locked."
+  mm_team_created: "March Madness team was successfully created."
