--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,9 +8,9 @@ en:
   no_team_for_user: "The current user is not associated with a March Madness Team."
   player_drafted: "Player was successfully drafted."
   out_of_turn_draft_pick: "It is not your turn to draft a player."
-  preferred_player_added: "Player was successfully added to your list of drafted players."
-  preferred_player_removed: "Player was successfully removed from your list of drafted players."
-  preferred_player_already_added: "This player has already been added to your drafted list."
+  preferred_player_added: "The player was successfully added to your roster."
+  preferred_player_removed: "The player was successfully removed from your roster."
+  preferred_player_already_added: "This player has already been added to your roster."
   invalid_roster: "This would cause an invalid roster."
   player_already_drafted: "This Player has already been drafted."
   ineligible_player_draft_pick: "This player is not eligible to be drafted in this round."
@@ -19,4 +19,4 @@ en:
   bracket_updated: "The bracket has been updated."
   rosters_locked: "All rosters are now locked."
   rosters_unlocked: "All rosters are now locked."
-  mm_team_created: "March Madness team was successfully created."
+  mm_team_created: "Your March Madness team was successfully created."
